--- a/WAP/css/index.css
+++ b/WAP/css/index.css
@@ -1,30 +1,34 @@
+body {
+  overflow-x: hidden;
+  min-height: 100vh;
+}
 .wap-container {
   background-image: url(../img/bg.png);
 }
 .wap-container .banner {
-  height: 107.0667vw;
+  height: 8.03rem;
   background-image: url(../img/banner.png);
   background-size: 100%;
 }
 .wap-container .nav-wrap {
   overflow-x: auto;
   background: url(../img/nav_bg.png) repeat;
-  height: 8.2667vw;
+  height: 0.62rem;
   user-select: none;
 }
 .wap-container .nav-wrap .nav-list {
   display: flex;
   position: relative;
-  height: 8.4vw;
+  height: 0.63rem;
   overflow-x: auto;
 }
 .wap-container .nav-wrap .nav-list .nav-item {
   flex: 0 0 auto;
   float: left;
-  padding: 0 3.3333vw;
+  padding: 0 0.35rem;
   height: 100%;
   background-size: contain;
-  font-size: 3.7333vw;
+  font-size: 0.28rem;
   color: #000;
   font-weight: bolder;
   user-select: none;
@@ -43,19 +47,19 @@
 }
 .wap-container #part1 {
   position: relative;
-  width: 100vw;
-  height: 91.8667vw;
+  height: 6.89rem;
   background: url(../img/part1_bg.png) no-repeat;
   background-size: 100%;
 }
 .wap-container #part1 .content {
   position: absolute;
-  top: 31.6667vw;
-  left: 2.6667vw;
-  width: 93.8667vw;
-  height: 52.8vw;
+  top: 2.4rem;
+  left: 0.15rem;
+  width: 7.04rem;
+  height: 3.96rem;
 }
 .wap-container #part1 .content .slide-box {
+  overflow: hidden;
   width: 100%;
   height: 100%;
 }
@@ -65,7 +69,7 @@
 }
 .wap-container #part1 .content .slide-box ul li {
   position: relative;
-  width: 93.8667vw;
+  width: 7.04rem;
   height: 100%;
 }
 .wap-container #part1 .content .slide-box ul li video {
@@ -77,15 +81,15 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-left: -20.8vw;
-  margin-top: -14.2666vw;
-  width: 41.6vw;
-  height: 28.5333vw;
+  margin-left: -1.56rem;
+  margin-top: -1.07rem;
+  width: 3.12rem;
+  height: 2.14rem;
 }
 .wap-container #part1 .content .slide-box ul li .video-logo .logo {
   position: absolute;
-  width: 41.6vw;
-  height: 28.5333vw;
+  width: 3.12rem;
+  height: 2.14rem;
   background: url(../img/video_logo.png) center no-repeat;
   background-size: 100%;
 }
@@ -94,10 +98,10 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 11.2vw;
-  height: 11.2vw;
-  margin-left: -5.6vw;
-  margin-top: -5.6vw;
+  width: 0.84rem;
+  height: 0.84rem;
+  margin-left: -0.42rem;
+  margin-top: -0.42rem;
   background: url(../img/video_play.png) center no-repeat;
   background-size: 100%;
   cursor: pointer;
@@ -106,42 +110,42 @@
 .wap-container #part1 .content .next {
   position: absolute;
   top: 50%;
-  height: 5.7333vw;
-  width: 7.6vw;
-  margin-top: -2.8666vw;
+  width: 0.57rem;
+  height: 0.43rem;
+  margin-top: -0.215rem;
 }
 .wap-container #part1 .content .back {
-  left: -1.111vw;
+  left: -0.05rem;
   background: url(../img/back.png) no-repeat;
   background-size: 100%;
 }
 .wap-container #part1 .content .next {
-  right: -1.111vw;
+  right: -0.05rem;
   background: url(../img/next.png) no-repeat;
   background-size: 100%;
 }
 .wap-container #part2 {
   position: relative;
-  width: 100vw;
-  height: 89.6vw;
+  height: 6.87rem;
   background: url(../img/part2_bg.png) no-repeat;
   background-size: 100%;
 }
 .wap-container #part2 .content {
   position: absolute;
-  top: 30.6667vw;
-  left: 2vw;
-  width: 96.4vw;
-  height: 53.5vw;
+  top: 2.4rem;
+  left: 0.2rem;
+  width: 7.1rem;
+  height: 4.13rem;
 }
 .wap-container #part2 .content .slide-box {
+  overflow: hidden;
   width: 100%;
   height: 100%;
 }
 .wap-container #part2 .content .slide-box ul li {
   position: relative;
-  width: 96.4vw;
-  height: 53.5vw;
+  width: 7.1rem;
+  height: 4.13rem;
 }
 .wap-container #part2 .content .slide-box ul li img {
   width: 100%;
@@ -149,25 +153,21 @@
 }
 .wap-container #part2 .content .slide-box ul li .info {
   position: absolute;
-  bottom: 5.3333vw;
+  bottom: 0.35rem;
   left: 50%;
-  margin-left: -40vw;
-  width: 80vw;
-  height: 15.9333vw;
+  margin-left: -2.55rem;
+  padding: 0 0.05rem;
+  width: 5.1rem;
+  height: 0.82rem;
   background-image: url(../img/part2_text_bg.png);
 }
 .wap-container #part2 .content .slide-box ul li .info .title {
-  padding: 2vw 2vw 1vw 2vw;
-  height: 6vw;
-  line-height: 6vw;
-  font-size: 20px;
+  font-size: 0.3rem;
   font-weight: bolder;
   text-align: center;
 }
 .wap-container #part2 .content .slide-box ul li .info .text {
-  padding: 0 5vw;
-  height: 6.3332vw;
-  font-size: 16px;
+  font-size: 0.24rem;
   font-weight: 600;
   text-align: center;
   overflow: hidden;
@@ -178,40 +178,42 @@
 .wap-container #part2 .content .next {
   position: absolute;
   top: 50%;
-  height: 5.7333vw;
-  width: 7.6vw;
-  margin-top: -2.8666vw;
+  width: 0.57rem;
+  height: 0.43rem;
+  margin-top: -0.215rem;
 }
 .wap-container #part2 .content .back {
-  left: -1.111vw;
+  left: -0.05rem;
   background: url(../img/back.png) no-repeat;
   background-size: 100%;
 }
 .wap-container #part2 .content .next {
-  right: -1.111vw;
+  right: -0.05rem;
   background: url(../img/next.png) no-repeat;
   background-size: 100%;
 }
 .wap-container #part2 .content .wap-slide-ctr {
   width: 100%;
   text-align: center;
-  padding-top: 4px;
-  font-size: 14px;
+  margin-top: -0.1rem;
 }
 .wap-container #part2 .content .wap-slide-ctr i {
   display: inline-block;
-  width: 2.1333vw;
-  height: 2.1333vw;
+  width: 0.09rem;
+  height: 0.09rem;
+  margin-left: 0.15rem;
   background: url(../img/part2_slide_default.png) center no-repeat;
   cursor: pointer;
+}
+.wap-container #part2 .content .wap-slide-ctr i:first-child {
+  margin-left: 0;
 }
 .wap-container #part2 .content .wap-slide-ctr .current {
   background-image: url(../img/part2_slide_current.png);
 }
 .wap-container #part3 {
   position: relative;
-  width: 100vw;
-  height: 139.2vw;
+  height: 10.44rem;
   background: url(../img/part3_bg.png) no-repeat;
   background-size: 100%;
 }
@@ -219,20 +221,21 @@
   position: absolute;
   top: 38.6667vw;
   left: 8.6667vw;
-  width: 91.3333vw;
+  width: 6.86rem;
   height: 75.3333vw;
 }
 .wap-container #part3 .content .slide-container {
   display: none;
   float: left;
   position: relative;
-  width: 39.6vw;
-  height: 75.4667vw;
+  width: 2.97rem;
+  height: 5.66rem;
 }
 .wap-container #part3 .content .slide-container:nth-child(1) {
   display: block;
 }
 .wap-container #part3 .content .slide-container .slide-box {
+  overflow: hidden;
   height: 100%;
 }
 .wap-container #part3 .content .slide-container .slide-box ul {
@@ -258,13 +261,11 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: -4vw;
+  bottom: -0.25rem;
   text-align: center;
 }
 .wap-container #part3 .content .slide-container .slide-ctr i {
   display: inline-block;
-  width: 2.1333vw;
-  height: 2.1333vw;
   background: url(../img/part2_slide_default.png) center no-repeat;
   cursor: pointer;
 }
@@ -273,10 +274,10 @@
 }
 .wap-container #part3 .content .slide-container .back-next {
   position: absolute;
-  left: -7.7333vw;
+  left: -0.565rem;
   bottom: 0;
-  width: 7.7333vw;
-  height: 14.2667vw;
+  width: 0.58rem;
+  height: 1.07rem;
   background: url(../img/part3_btn_bg.png) center no-repeat;
 }
 .wap-container #part3 .content .slide-container .back-next .back,
@@ -335,7 +336,7 @@
   padding-left: 5px;
   line-height: 2.1;
   color: #000;
-  font-size: 20px;
+  font-size: 0.26rem;
   font-family: "YJcujihei";
   font-weight: bold;
   text-overflow: ellipsis;
@@ -348,40 +349,47 @@
 }
 .wap-container #part4 {
   position: relative;
-  width: 100vw;
-  height: 113.8667vw;
+  height: 8.54rem;
   background: url(../img/part4_bg.png) center no-repeat;
   background-size: 100%;
 }
 .wap-container #part4 .content {
   position: absolute;
-  top: 32vw;
+  top: 2.4rem;
   left: 50%;
   margin-left: -42.0666vw;
-  width: 84.1333vw;
-  height: 65.8667vw;
+  width: 6.31rem;
+  height: 4.94rem;
 }
-.wap-container #part4 .content li {
-  height: 65.8667vw;
+.wap-container #part4 .content .slide-container {
+  height: 100%;
 }
-.wap-container #part4 .content li .left-content,
-.wap-container #part4 .content li .right-content {
+.wap-container #part4 .content .slide-container .slide-box {
+  overflow: hidden;
+  height: 100%;
+}
+.wap-container #part4 .content .slide-container .slide-box li {
+  width: 2.98rem;
+  height: 4.94rem;
+}
+.wap-container #part4 .content .slide-container .slide-box li .left-content,
+.wap-container #part4 .content .slide-container .slide-box li .right-content {
   position: relative;
   float: left;
-  width: 39.7333vw;
+  width: 2.98rem;
 }
-.wap-container #part4 .content li .left-content .click_before,
-.wap-container #part4 .content li .right-content .click_before {
+.wap-container #part4 .content .slide-container .slide-box li .left-content .click_before,
+.wap-container #part4 .content .slide-container .slide-box li .right-content .click_before {
   display: block;
   position: absolute;
-  bottom: 20px;
+  bottom: 0.2rem;
   left: 0;
   width: 100%;
   text-align: center;
 }
-.wap-container #part4 .content li .left-content .click_before .title,
-.wap-container #part4 .content li .right-content .click_before .title {
-  font-size: 20px;
+.wap-container #part4 .content .slide-container .slide-box li .left-content .click_before .title,
+.wap-container #part4 .content .slide-container .slide-box li .right-content .click_before .title {
+  font-size: 0.24rem;
   color: #f7ca7f;
   font-weight: bolder;
   font-family: "YJcujihei";
@@ -391,8 +399,8 @@
   overflow: hidden;
   white-space: nowrap;
 }
-.wap-container #part4 .content li .left-content .click_after,
-.wap-container #part4 .content li .right-content .click_after {
+.wap-container #part4 .content .slide-container .slide-box li .left-content .click_after,
+.wap-container #part4 .content .slide-container .slide-box li .right-content .click_after {
   display: none;
   position: absolute;
   bottom: 0;
@@ -402,32 +410,31 @@
   filter: alpha(opacity=50);
   background-image: linear-gradient(rgba(255, 255, 255, 0), #cca169);
 }
-.wap-container #part4 .content li .left-content .click_after .info,
-.wap-container #part4 .content li .right-content .click_after .info {
+.wap-container #part4 .content .slide-container .slide-box li .left-content .click_after .info,
+.wap-container #part4 .content .slide-container .slide-box li .right-content .click_after .info {
   position: absolute;
-  bottom: 0vw;
+  bottom: 0.5rem;
   left: 0;
-  height: 100px;
-  width: 100%;
+  margin-left: 5%;
+  height: 1rem;
+  width: 88%;
 }
-.wap-container #part4 .content li .left-content .click_after .info .title,
-.wap-container #part4 .content li .right-content .click_after .info .title {
+.wap-container #part4 .content .slide-container .slide-box li .left-content .click_after .info .title,
+.wap-container #part4 .content .slide-container .slide-box li .right-content .click_after .info .title {
   margin-bottom: 5px;
-  font-size: 20px;
-  font-weight: bold;
+  font-size: 0.24rem;
+  font-weight: bolder;
   font-family: "YJcujihei";
   color: #000000;
   line-height: 1.644;
   text-align: center;
 }
-.wap-container #part4 .content li .left-content .click_after .info .text,
-.wap-container #part4 .content li .right-content .click_after .info .text {
-  margin: 5px;
-  font-size: 14px;
+.wap-container #part4 .content .slide-container .slide-box li .left-content .click_after .info .text,
+.wap-container #part4 .content .slide-container .slide-box li .right-content .click_after .info .text {
+  font-size: 0.18rem;
   font-family: "FZLTHJW";
   color: #000000;
-  font-weight: 600;
-  text-align: left;
+  line-height: 1.5;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
@@ -435,12 +442,12 @@
   /*! autoprefixer: off */
   -webkit-box-orient: vertical;
 }
-.wap-container #part4 .content li img {
+.wap-container #part4 .content .slide-container .slide-box li img {
   width: 39.7333vw;
   height: 65.8667vw;
 }
-.wap-container #part4 .content li .right-content {
-  margin-left: 4.6667vw;
+.wap-container #part4 .content .slide-container .slide-box li .right-content {
+  float: right;
 }
 .wap-container #part4 .content .back,
 .wap-container #part4 .content .next {
@@ -467,45 +474,50 @@
   background: url(../img/part5_bg.png) center no-repeat;
   background-size: 100%;
 }
-.wap-container #part5 .slide-box {
+.wap-container #part5 .content {
   position: absolute;
   top: 33.3333vw;
   left: 7.3333vw;
   height: 84.6667vw;
   width: 89.3333vw;
 }
-.wap-container #part5 .slide-box ul {
+.wap-container #part5 .content .slide-box {
+  height: 84.6667vw;
+  width: 89.3333vw;
+  overflow: hidden;
+}
+.wap-container #part5 .content .slide-box ul {
   height: 84.6667vw;
 }
-.wap-container #part5 .slide-box ul li {
+.wap-container #part5 .content .slide-box ul li {
   position: relative;
   height: 84.6667vw;
   width: 100%;
 }
-.wap-container #part5 .slide-box ul li .big-pic {
+.wap-container #part5 .content .slide-box ul li .big-pic {
   width: 48.6667vw;
   height: 72.5333vw;
 }
-.wap-container #part5 .slide-box ul li .big-pic img {
+.wap-container #part5 .content .slide-box ul li .big-pic img {
   width: 48.6667vw;
   height: 72.5333vw;
   object-fit: cover;
 }
-.wap-container #part5 .slide-box ul li .info {
+.wap-container #part5 .content .slide-box ul li .info {
   position: absolute;
   top: 0;
   right: 0.6667vw;
   width: 39.0667vw;
   height: 84.6667vw;
 }
-.wap-container #part5 .slide-box ul li .info .small-pic {
+.wap-container #part5 .content .slide-box ul li .info .small-pic {
   position: relative;
   margin-left: 3.8667vw;
   margin-top: 6.6667vw;
   width: 29.0667vw;
   height: 29.2vw;
 }
-.wap-container #part5 .slide-box ul li .info .small-pic .pic-border {
+.wap-container #part5 .content .slide-box ul li .info .small-pic .pic-border {
   position: absolute;
   top: 0;
   left: 0;
@@ -514,7 +526,7 @@
   background-image: url(../img/part5_pic_right_bg.png);
   background-size: 100%;
 }
-.wap-container #part5 .slide-box ul li .info .small-pic img {
+.wap-container #part5 .content .slide-box ul li .info .small-pic img {
   position: absolute;
   top: 0;
   left: 0;
@@ -524,67 +536,81 @@
   height: 25.8667vw;
   object-fit: cover;
 }
-.wap-container #part5 .slide-box ul li .info .name {
+.wap-container #part5 .content .slide-box ul li .info .name {
   margin-top: 4.6667vw;
   margin-left: 3.8667vw;
-  font-size: 3.2vw;
+  font-size: 0.36rem;
   font-weight: bolder;
 }
-.wap-container #part5 .slide-box ul li .info .desc {
+.wap-container #part5 .content .slide-box ul li .info .desc {
   margin: 4.6667vw 3.8667vw;
-  font-size: 2.4vw;
-  line-height: 1.75;
+  font-size: 0.26rem;
+  line-height: 1.6;
   font-weight: bolder;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 6;
+  -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
 }
-.wap-container #part5 .slide-box .back,
-.wap-container #part5 .slide-box .next {
+.wap-container #part5 .content .slide-box .back,
+.wap-container #part5 .content .slide-box .next {
   position: absolute;
   top: 50%;
   height: 5.7333vw;
   width: 7.6vw;
   margin-top: -2.8666vw;
 }
-.wap-container #part5 .slide-box .back {
+.wap-container #part5 .content .slide-box .back {
   left: 0;
   background: url(../img/part5_back.png) no-repeat;
   background-size: 100%;
 }
-.wap-container #part5 .slide-box .next {
+.wap-container #part5 .content .slide-box .next {
   right: 0;
   background: url(../img/part5_next.png) no-repeat;
   background-size: 100%;
 }
-.wap-container #part5 .wap-slide-ctr {
+.wap-container #part5 .content .wap-slide-ctr {
   position: absolute;
-  bottom: 8vw;
+  bottom: -0.5rem;
   width: 100%;
   text-align: center;
   padding-top: 4px;
   font-size: 14px;
 }
-.wap-container #part5 .wap-slide-ctr i {
+.wap-container #part5 .content .wap-slide-ctr i {
   display: inline-block;
   width: 2.1333vw;
   height: 2.1333vw;
   background: url(../img/part2_slide_default.png) center no-repeat;
   cursor: pointer;
 }
-.wap-container #part5 .wap-slide-ctr .current {
+.wap-container #part5 .content .wap-slide-ctr .current {
   background-image: url(../img/part2_slide_current.png);
 }
 .wap-container #team {
   position: relative;
-  width: 100vw;
-  height: 19.7333vw;
+  height: 1.48rem;
   background: url(../img/team_bg.png) center no-repeat;
   background-size: 100%;
 }
 .wap-container #part1 .control,
 .wap-container #part4 .control {
   display: none;
+}
+.wap-container .back,
+.wap-container .next {
+  z-index: 1;
+}
+.wap-container .wap-slide-ctr i,
+.wap-container .slide-ctr i {
+  display: inline-block;
+  margin-left: 0.15rem;
+  width: 0.09rem;
+  height: 0.09rem;
+}
+.wap-container .wap-slide-ctr i:first-child,
+.wap-container .slide-ctr i:first-child {
+  margin-left: 0;
 }
